WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
288072
REGRESSION(
290260@main
): [Win,GTK,WPE] WebInspector can't open by clicking the context menu item
https://bugs.webkit.org/show_bug.cgi?id=288072
Summary
REGRESSION(290260@main): [Win,GTK,WPE] WebInspector can't open by clicking th...
Fujii Hironori
Reported
2025-02-19 23:21:29 PST
REGRESSION(
290260@main
): [Win,GTK,WPE] WebInspector can't open by clicking the context menu item
Attachments
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2025-02-19 23:27:51 PST
Pull request:
https://github.com/WebKit/WebKit/pull/40955
EWS
Comment 2
2025-02-20 11:34:01 PST
Committed
290730@main
(36e2ac39cc46): <
https://commits.webkit.org/290730@main
> Reviewed commits have been landed. Closing PR #40955 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-02-20 11:34:16 PST
<
rdar://problem/145235413
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug