REGRESSION(290260@main): WebInspector can't be opened by clicking the context menu item for non-Mac https://bugs.webkit.org/show_bug.cgi?id=288072

Reviewed by Chris Dumez.

<https://commits.webkit.org/290260@main> added
ContextMenuItemTagInspectElement case to the switch statements in
WebPageProxy::contextMenuItemSelected only for PLATFORM(MAC). It
should be cross platform.

* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::contextMenuItemSelected):

Canonical link: https://commits.webkit.org/290730@main